crates/norte-tui/tests/snapshots/layout_anchor__orthodox-100x30.snap
---
source: crates/norte-tui/tests/layout_anchor.rs
expression: "lines.join(\"\\n\")"
---
 Archivo  Operar  Marcar  Ir  Paneles  Pestañas  Buscar  Ver  Herramientas  Ayuda    [|] [-] [=] [#]
 Sitios  Visor  Procesos  Detalles  Árbol  Registro  Mapa de disco  Historial  Terminal             
┌/casa───────────────────────────────────────────┐┌/casa───────────────────────────────────────────┐
│Nombre▲                       Tamaño       Fecha││Nombre▲                       Tamaño       Fecha│
│   f00                           1 B            ││   f00                           1 B            │
│   f01                           1 B            ││   f01                           1 B            │
│   f02                           1 B            ││   f02                           1 B            │
│   f03                           1 B            ││   f03                           1 B            │
│   f04                           1 B            ││   f04                           1 B            │
│   f05                           1 B            ││   f05                           1 B            │
│   f06                           1 B            ││   f06                           1 B            │
│   f07                           1 B            ││   f07                           1 B            │
│   f08                           1 B            ││   f08                           1 B            │
│   f09                           1 B            ││   f09                           1 B            │
│   f10                           1 B            ││   f10                           1 B            │
│   f11                           1 B            ││   f11                           1 B            │
│   f12                           1 B            ││   f12                           1 B            │
│   f13                           1 B            ││   f13                           1 B            │
│   f14                           1 B            ││   f14                           1 B            │
│   f15                           1 B            ││   f15                           1 B            │
│   f16                           1 B            ││   f16                           1 B            │
│   f17                           1 B            ││   f17                           1 B            │
│   f18                           1 B            ││   f18                           1 B            │
│   f19                           1 B            ││   f19                           1 B            │
│   f20                           1 B            ││   f20                           1 B            │
│   f21                           1 B            ││   f21                           1 B            │
│   f22                           1 B            ││   f22                           1 B            │
│   f23                           1 B            ││   f23                           1 B            │
└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘
 /casa                                                                        1/60  Nombre ↑  UTF-8
