crates/norte-tui/tests/snapshots/layout_anchor__preset-explorer-80x24.snap
---
source: crates/norte-tui/tests/layout_anchor.rs
expression: "lines.join(\"\\n\")"
---
 Archivo Operar Marcar Ir Paneles Pestañas Buscar Ver Herramientas Ayuda        
 S  V  P  D  Á  R  M  H  T                                                      
┌ Sitios ──────┐┌/casa─────────────────────────┐┌ Visor ───────────────────────┐
│▾ Unidades    ││Nombre▲                 Tamaño││                              │
│▾ Favoritos   ││   f00                     1 B││                              │
│              ││   f01                     1 B││                              │
│              ││   f02                     1 B││                              │
│              ││   f03                     1 B││                              │
│              ││   f04                     1 B││                              │
│              ││   f05                     1 B││                              │
│              ││   f06                     1 B││                              │
│              ││   f07                     1 B││                              │
│              ││   f08                     1 B││                              │
│              ││   f09                     1 B││                              │
│              ││   f10                     1 B││                              │
└──────────────┘└──────────────────────────────┘└──────────────────────────────┘
┌ Procesos ────────────────────────────────────────────────────────────────────┐
│nada en marcha                                                                │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 /casa                                                    1/60  Nombre ↑  UTF-8
