crates/norte-tui/tests/snapshots/layout_anchor__preset-full-40x10.snap
---
source: crates/norte-tui/tests/layout_anchor.rs
expression: "lineas.join(\"\\n\")"
---
┌ Sitios ──────┐┌⟨file⟩/cas┐┌⟨file⟩/cas┐
│▾ Unidades    ││Nombre▲   ││Nombre▲   │
│▾ Favoritos   ││   f00    ││   f00    │
│              ││   f01    ││   f01    │
│              ││   f02    ││   f02    │
│              ││   f03    ││   f03    │
│              ││   f04    ││   f04    │
│              ││   f05    ││   f05    │
└──────────────┘└──────────┘└──────────┘
 ⟨file⟩/casa  1/60
