crates/norte-tui/tests/snapshots/layout_anchor__preset-full-80x24.snap
---
source: crates/norte-tui/tests/layout_anchor.rs
expression: "lines.join(\"\\n\")"
---
 Archivo Operar Marcar Ir Paneles Pestañas Buscar Ver Herramientas Ayuda        
 S  V  P  D  Á  R  M  H  T                                                      
┌ Sitios ──────┐┌/casa──────────┐┌/casa──────────┐┌ Visor ─────────────────────┐
│▾ Unidades    ││Nombre▲        ││Nombre▲        ││                            │
│▾ Favoritos   ││   f00         ││   f00         ││                            │
│              ││   f01         ││   f01         ││                            │
│              ││   f02         ││   f02         ││                            │
│              ││   f03         ││   f03         │└────────────────────────────┘
│              ││   f04         ││   f04         │┌ Detalles · /casa ──────────┐
│              ││   f05         ││   f05         ││nada bajo el cursor         │
│              ││   f06         ││   f06         ││                            │
│              ││   f07         ││   f07         ││                            │
│              ││   f08         ││   f08         ││                            │
│              ││   f09         ││   f09         ││                            │
└──────────────┘└───────────────┘└───────────────┘└────────────────────────────┘
┌ Procesos ────────────────────────────────────────────────────────────────────┐
│nada en marcha                                                                │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 /casa                                                    1/60  Nombre ↑  UTF-8
