crates/norte-tui/tests/snapshots/layout_anchor__preset-krusader-40x10.snap
---
source: crates/norte-tui/tests/layout_anchor.rs
expression: "lines.join(\"\\n\")"
---
 Archivo  Marcar  Paneles  Pestañas     
 S  V  P  D  Á  R                       
┌ Sitios ──────┐┌/casa─────┐┌/casa─────┐
│▾ Unidades    ││Nombre▲   ││Nombre▲   │
│▾ Favoritos   ││   f00    ││   f00    │
│              ││   f01    ││   f01    │
│              ││   f02    ││   f02    │
│              ││   f03    ││   f03    │
└──────────────┘└──────────┘└──────────┘
 /casa  1/60
