crates/norte-tui/tests/snapshots/layout_anchor__preset-orthodox-40x10.snap
---
source: crates/norte-tui/tests/layout_anchor.rs
expression: "lines.join(\"\\n\")"
---
 Archivo Operar Marcar Ir Paneles       
 S  V  P  D  Á  R  M  H                 
┌/casa─────────────┐┌/casa─────────────┐
│Nombre▲           ││Nombre▲           │
│   f00            ││   f00            │
│   f01            ││   f01            │
│   f02            ││   f02            │
│   f03            ││   f03            │
└──────────────────┘└──────────────────┘
 /casa                      1/60  UTF-8
