crates/norte-tui/tests/snapshots/layout_anchor__preset-simple-40x10.snap
---
source: crates/norte-tui/tests/layout_anchor.rs
expression: "lines.join(\"\\n\")"
---
 Archivo  Marcar  Paneles  Pestañas     
 S  V  P  D  Á  R                       
┌/casa─────────────────────────────────┐
│Nombre▲               Tamaño     Fecha│
│   f00                   1 B          │
│   f01                   1 B          │
│   f02                   1 B          │
│   f03                   1 B          │
└──────────────────────────────────────┘
 /casa  1/60
